Fix overflow-x

--- a/style/_common.scss
+++ b/style/_common.scss
@@ -12,7 +12,6 @@ $gray: #7d777a;
 html {
   background-color: #fff;
   font-size: 100%;
-  overflow-x: hidden;
 }
 
 // @media (max-width: 768px) {
@@ -22,6 +21,5 @@ html {
 // }
 
 section {
-  width: 100vw;
   height: 100vh;
 }
