--- a/style/_section_0_Header.scss
+++ b/style/_section_0_Header.scss
@@ -1,5 +1,4 @@
 header {
-  width: 100vw;
   height: 100vh;
   img {
     margin-top: 5vh;
@@ -9,7 +8,7 @@ header {
   h1 {
     font-size: 4.5rem;
     margin-top: 7rem;
-    margin-left: 4rem;
+    padding-left: 4rem;
     span {
       color: $blue;
       display: block;
@@ -18,18 +17,18 @@ header {
       }
       &:nth-of-type(2) {
         font-size: 3.5rem;
-        margin-left: .3rem;
+        padding-left: .3rem;
       }
       &:nth-of-type(3) {
-        margin-left: 6rem;
+        padding-left: 6rem;
       }
       &:nth-of-type(4) {
         font-size: 5.5rem;
         color: $pink;
-        margin-left: 2.5rem;
+        padding-left: 2.5rem;
       }
       &:nth-of-type(5) {
-        margin-left: 17rem;
+        padding-left: 17rem;
       }
     }
   }
