--- a/style/_section_1_About.scss
+++ b/style/_section_1_About.scss
@@ -15,7 +15,7 @@
   }
   ul {
     color: $blue;
-    margin: 3rem 0 0 8rem;
+    padding: 3rem 0 0 8rem;
     list-style-type: none;
     font-size: 1.2rem;
     li {
