--- a/style/_section_2_Code-pieces.scss
+++ b/style/_section_2_Code-pieces.scss
@@ -16,7 +16,7 @@
 #code-piece-3 {
   p { 
     font-size: 4rem;
-    margin: 35vh 10vw;
+    padding: 35vh 10vw;
     span {
       display: block;
       padding-left: 7rem;
